# sample-agentcore-code-interpreter-coding-contest

./: .env.credentials.example  .gitignore  README.md  RUNBOOK.md  app.py  cdk.json  pyproject.toml
.github/: dependabot.yml
.kiro/specs/problem-definition-improvement/: plan.md
contents/bracket-depth/: metadata.json  solver.py  test_solver.py
contents/country-quiz/: metadata.json  solver.py  test_solver.py
contents/ctf-flag/: metadata.json  solver.py  test_solver.py
contents/prime-check/: metadata.json  solver.py  test_solver.py
contents/range-lookup/: metadata.json  solver.py  test_solver.py
ctf/: .flag  README.txt
ctf/flag/: env.json
lambda/: admin_auth.py  api.py  explore.py  game_state.py  leaderboard.py  logic.py  problems.py  rate_limit.py  reset.py  submit.py
lambda_edge/: basic_auth.py
programming_contest/: programming_contest_stack.py
scripts/: build_contents.py
tests/: test_submit_api.py
tests/e2e/: e2e_scenario.md
tests/integ/: conftest.py  test_api.py  test_submit.py  test_submit_schema.py
tests/unit/: conftest.py  test_api_logic.py  test_rate_limit.py
website/: admin.html  common.css  components.js  index.html  openapi.yaml  problem.js  problems.html
