[project]
name = "code-interpreter-coding-contest"
version = "0.1.0"
description = "Code Interpreter Coding Contest - Serverless platform for AI-driven coding contests"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0,<11.0.0",
    "boto3",
    "aws_pdk",
    "cdk-nag",
]

[dependency-groups]
dev = [
    "commonmark",
    "ruff",
    "pytest",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
